# ferric-fred

./: .dockerignore  .envrc.example  .envrc.shared  .gitignore  .infisical.json  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  flake.nix  glama.json  server.json
.githooks/: pre-commit  pre-push
.github/workflows/: bench.yml  ci.yml  live.yml  mcp-registry-publish.yml  release.yml  repo-settings.yml
benchmarks/mcp-startup/: README.md  bench.sh
crates/ferric-fred/: CHANGELOG.md  Cargo.toml  README.md
crates/ferric-fred-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/ferric-fred-cli/benches/: render.rs
crates/ferric-fred-cli/src/: args.rs  chart.rs  geofred.rs  lib.rs  main.rs
crates/ferric-fred-cli/tests/: cli.rs
crates/ferric-fred-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/ferric-fred-mcp/src/: main.rs  output.rs  params.rs
crates/ferric-fred/benches/: deserialization.rs  deserialization_criterion.rs
crates/ferric-fred/benches/fixtures/: mod.rs
crates/ferric-fred/src/: aggregation_method.rs  category.rs  category_series_request.rs  client.rs  error.rs  frequency.rs  ids.rs  lib.rs  observation.rs  observations_request.rs  order_by.rs  paginate.rs  region_type.rs  regional_data.rs  release.rs  release_date.rs  release_dates_request.rs  release_series_request.rs  release_table.rs  release_tables_request.rs  releases_request.rs  search_type.rs  seasonal_adjustment.rs  series.rs  series_data_request.rs  series_group.rs  series_list_request.rs  series_search_request.rs  series_updates_request.rs  shape_file.rs  shape_type.rs  sort_order.rs  source.rs  sources_request.rs  tag.rs  tags_request.rs  tags_series_request.rs  units.rs  updates_filter.rs  vintage_dates.rs  (+1 more)
crates/ferric-fred/tests/: live_category.rs  live_geofred.rs  live_observations.rs  live_releases.rs  live_search.rs  live_series.rs  live_sources.rs  live_tags.rs  thread_safety.rs
docs/: ideas.md
docs/adr/: 0001-record-architecture-decisions.md  0002-workspace-layout.md  0003-async-runtime-and-http-client.md  0004-error-handling.md  0005-domain-modelling-and-strong-typing.md  0006-license.md  0007-rust-edition-and-msrv.md  0008-nix-flake-dev-environment.md  0009-secret-management-infisical-direnv.md  0010-mcp-server-design.md  0011-testing-strategy.md  0012-ci-versioning-and-release.md  0013-endpoint-addition-pattern.md  0014-pre-commit-secret-guard.md  0015-cli-binary-naming.md  0016-ci-live-tests-machine-identity.md  0017-release-tables-tree.md  0018-release-secret-via-infisical.md  0019-series-updates-time-window.md  0020-auto-pagination.md  0021-streaming-pagination.md  0022-repo-settings-as-code.md  0023-mcp-output-schemas.md  0024-alfred-point-in-time-observations.md  0025-geofred-maps-api.md  0026-perf-tooling-pilot.md  0027-types-in-types-out.md  0028-agent-driven-mcp-testing.md  0029-shared-disciplines-across-the-sibling-rust-mcp-repos.md  0030-l2-testing-stance-proptest-adopt-or-decline.md  README.md
scripts/: bench-ci.sh  bench-cli.sh  mcp-agent-audit.sh  repo-settings.sh
