[workspace]
resolver = "2"
members = ["crates/ferric-fred", "crates/ferric-fred-cli", "crates/ferric-fred-mcp"]

# Shared metadata, dependency versions, and lints, inherited by every member
# crate via `field.workspace = true` (see ADR-0002).
[workspace.package]
# No shared `version`: each crate carries its own (independent semver, driven by
# release-plz from Conventional Commits — ADR-0012).
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ojhermann-org/ferric-fred"

[workspace.dependencies]
# Async HTTP on rustls — no system OpenSSL dependency (ADR-0003). We own
# deserialization (ADR-0004/0005), so reqwest's `json` feature is not enabled;
# we read the raw body and parse with serde_json to distinguish transport from
# deserialize errors.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
tokio = { version = "1", default-features = false }

# Binary-only (the CLI): ergonomic error context (ADR-0004), arg parsing, and
# the terminal-UI toolkit for `fred chart`.
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"

# CLI integration testing (dev-only): run the compiled `fred` binary and assert
# on its stdout/stderr and exit status.
assert_cmd = "2"
predicates = "3"
# Library HTTP mocking (dev-only): a local mock server for offline endpoint tests
# (ADR-0011).
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
# Two pedantic lints adopted for public-API hygiene: builders/fallible fns are
# marked #[must_use] and documented. must_use_candidate is deliberately left off
# (too noisy — it wants #[must_use] on every getter).
return_self_not_must_use = "warn"
missing_errors_doc = "warn"
