[package]
name = "ferric-fred-cli"
description = "Command-line interface for FRED (Federal Reserve Economic Data), built on the ferric-fred client."
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["fred", "economics", "finance", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fred"
path = "src/main.rs"

[dependencies]
# The library, by workspace path — a breaking library change can't compile-pass
# the CLI without updating it (ADR-0002). The explicit version (kept in step with
# the library crate's own version by release-plz — ADR-0012) is used when
# published to crates.io; the path is used locally.
ferric-fred = { path = "../ferric-fred", version = "0.1.0" }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
