[package]
name = "ferric-fred-cli"
description = "Command-line interface for FRED (Federal Reserve Economic Data), built on the ferric-fred client."
version = "0.3.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["fred", "economics", "finance", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fred"
path = "src/main.rs"

[dependencies]
# The library, by workspace path — a breaking library change can't compile-pass
# the CLI without updating it (ADR-0002). The explicit version (kept in step with
# the library crate's own version by release-plz — ADR-0012) is used when
# published to crates.io; the path is used locally.
ferric-fred = { path = "../ferric-fred", version = "0.3.6" }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
# Headless TUI render bench (perf pilot — ADR-0026). divan drives it; ratatui's
# `TestBackend` (already a ratatui feature) is the offline, tty-free backend.
divan = { workspace = true }

# Headless `fred chart` render microbench — build chart data + draw one frame into
# a `TestBackend`, no tty, no network. `harness = false` hands `cargo bench` to
# divan. See ADR-0026 (TUI-startup timing was infeasible via hyperfine; this
# measures the render work instead). Local-only: divan has no Bencher adapter.
[[bench]]
name = "render"
harness = false

[lints]
workspace = true
