[package]
name = "ferric-fred"
description = "A strongly-typed async Rust client for the FRED (Federal Reserve Economic Data) API."
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["fred", "economics", "finance", "api-client", "async"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# `rt` + `macros` give `#[tokio::test]` a current-thread runtime for the live and
# HTTP-mocked tests; the library itself pulls no tokio features of its own.
tokio = { workspace = true, features = ["rt", "macros"] }
# Local mock HTTP server for offline endpoint tests (ADR-0011).
wiremock = { workspace = true }

[lints]
workspace = true
