[package]
name = "ferric-fred"
description = "A strongly-typed async Rust client for the FRED (Federal Reserve Economic Data) API."
version = "0.3.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["fred", "economics", "finance", "api-client", "async"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
# `time` gives the async sleep behind `Paginate::send_all`'s bounded 429 retry
# (ADR-0020). This is the library's only tokio feature — reqwest already pulls
# tokio in transitively; we opt into just the timer, not a runtime.
tokio = { workspace = true, features = ["time"] }
# Lazy streaming pagination (`Paginate::stream`, ADR-0021): the `Stream` trait
# for the public signature and the generator macro behind it.
futures-core = { workspace = true }
async-stream = { workspace = true }
# Optional JSON Schema derivation for the domain types, behind the `schemars`
# feature (ADR-0023). Off by default so plain library consumers pay neither the
# dependency nor the compile cost; the MCP server turns it on to attach output
# schemas to its tools. `chrono04` supplies the schema for the `NaiveDate` fields.
schemars = { workspace = true, optional = true, features = ["chrono04"] }

[features]
# Derive `schemars::JsonSchema` on the public domain (return) types, so an MCP
# server (or any consumer) can advertise the exact shape of what an endpoint
# returns. Additive and default-off — see ADR-0023.
schemars = ["dep:schemars"]

[dev-dependencies]
# `rt` + `macros` give `#[tokio::test]` a current-thread runtime for the live and
# HTTP-mocked tests; the library itself pulls no tokio features of its own.
tokio = { workspace = true, features = ["rt", "macros"] }
# Local mock HTTP server for offline endpoint tests (ADR-0011).
wiremock = { workspace = true }
# `clock` (which the library proper omits — it takes naive times) gives
# `Utc::now()` for the live series/updates time-window test (ADR-0019).
chrono = { workspace = true, features = ["clock"] }
# `StreamExt` for driving `Paginate::stream` in tests and doc examples (ADR-0021).
futures-util = { workspace = true }
# Perf-tooling pilot (issue #42, ADR-0026). `divan` drives the deserialization
# microbenches; `criterion` mirrors one of them as the vs-criterion baseline.
divan = { workspace = true }
criterion = { workspace = true }

# Deserialization microbenches — the observations/release-table parse hot path
# (client.rs `from_slice`). `harness = false` hands `cargo bench` to divan's own
# `main()` instead of libtest.
[[bench]]
name = "deserialization"
harness = false

# The same observations-parse workload under criterion, kept minimal — it exists
# only to compare ergonomics and output against `divan` for the radar verdict.
[[bench]]
name = "deserialization_criterion"
harness = false

[lints]
workspace = true
